--- a/UsuariosBUSAPP/app/src/main/res/layout/activity_main.xml
+++ b/UsuariosBUSAPP/app/src/main/res/layout/activity_main.xml
@@ -10,18 +10,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.jorge_alejandro.usuariosbusapp.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/textView" />
-
     <Button
         android:text="Mapa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="74dp"
         android:id="@+id/button1"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="126dp" />
+
 </RelativeLayout>
