--- a/UsuariosBUSAPP/app/src/main/res/layout/activity_main.xml
+++ b/UsuariosBUSAPP/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,9 @@
         android:text="Mapa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button1"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="126dp" />
-
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="145dp"
+        android:layout_marginTop="117dp"
+        android:id="@+id/mapa"/>
 </RelativeLayout>
