--- a/UsuariosBUSAPP/app/src/main/res/layout/activity_maps.xml
+++ b/UsuariosBUSAPP/app/src/main/res/layout/activity_maps.xml
@@ -18,7 +18,8 @@
         android:layout_width="match_parent"
         android:layout_marginTop="50dp"
         android:layout_height="match_parent"
-        tools:context="com.example.jorge_alejandro.usuariosbusapp.MapsActivity" />
+        tools:context="com.example.jorge_alejandro.usuariosbusapp.MapsActivity"
+        android:layout_marginBottom="50dp" />
 
     <TextView
         android:text="BUSAPP"
@@ -27,4 +28,13 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/textView2" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="14dp" />
 </RelativeLayout>
